design updates dark - light
Former-commit-id: f9ac9492ada323ac30bd17b4f40ea057d4b1f56a

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -170,5 +170,7 @@
         <file>icons/XFUEL_card_logo_colored_01.svg</file>
         <file>icons/xby_logo_TM.svg</file>
         <file>icons/xby_logo_TM_01.svg</file>
+        <file>icons/XBY_card_logo_01.svg</file>
+        <file>icons/XFUEL_card_logo_01.svg</file>
     </qresource>
 </RCC>
