--- a/frontend/frontend.qrc
+++ b/frontend/frontend.qrc
@@ -142,11 +142,9 @@
         <file>+mobile/Onboarding.qml</file>
         <file>+mobile/SignUp.qml</file>
         <file>+mobile/Home.qml</file>
-        <file>+mobile/MobileAddressBook.qml</file>
         <file>Controls/+mobile/QrCode.qml</file>
         <file>Controls/+mobile/CoinPicklist.qml</file>
         <file>Controls/+mobile/WalletPicklist.qml</file>
-        <file>Controls/+mobile/CoinModal.qml</file>
         <file>Controls/+mobile/WalletDetailList.qml</file>
         <file>Controls/+mobile/CoinList.qml</file>
         <file>Controls/+mobile/Contacts.qml</file>
@@ -154,5 +152,8 @@
         <file>Controls/+mobile/PictureList.qml</file>
         <file>Controls/+mobile/ContactModal.qml</file>
         <file>Controls/+mobile/HistoryModal.qml</file>
+        <file>Controls/+mobile/AddWallet.qml</file>
+        <file>Controls/+mobile/CreateWallet.qml</file>
+        <file>../resources/icons/XFUEL_card_logo_01.svg</file>
     </qresource>
 </RCC>
