login and sign up process
Former-commit-id: 1700d79f19fa1798d804f57f0dafb5581b25b9d4

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -172,5 +172,9 @@
         <file>icons/xby_logo_TM_01.svg</file>
         <file>icons/XBY_card_logo_01.svg</file>
         <file>icons/XFUEL_card_logo_01.svg</file>
+        <file>icons/icon-error_01.svg</file>
+        <file>icons/icon-close_01.svg</file>
+        <file>icons/XBY_logo_large.svg</file>
+        <file>icons/icon-questionmark_01.svg</file>
     </qresource>
 </RCC>
