--- a/frontend/frontend.qrc
+++ b/frontend/frontend.qrc
@@ -155,5 +155,7 @@
         <file>Controls/+mobile/AddWallet.qml</file>
         <file>Controls/+mobile/CreateWallet.qml</file>
         <file>../resources/icons/XFUEL_card_logo_01.svg</file>
+        <file>+mobile/InitialSetup.qml</file>
+        <file>+mobile/CreateAccount.qml</file>
     </qresource>
 </RCC>
