streamlining the sing up proces and the pinlock process
Former-commit-id: 5b0abaaed7f3217fc1e7f140728fada9728178ff

--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -182,5 +182,6 @@
         <file>icons/XBY_logo_big.svg</file>
         <file>icons/XFUEL_logo_big.svg</file>
         <file>gifs/loading_02.gif</file>
+        <file>gifs/loading_01.gif</file>
     </qresource>
 </RCC>
