--- a/frontend/frontend.qrc
+++ b/frontend/frontend.qrc
@@ -160,5 +160,7 @@
         <file>Controls/+mobile/CurrencyPicklist.qml</file>
         <file>+mobile/WalletSettings.qml</file>
         <file>Controls/+mobile/Pincode.qml</file>
+        <file>+mobile/WalletBackup.qml</file>
+        <file>+mobile/Applications.qml</file>
     </qresource>
 </RCC>
