added session timer and interaction tracker
Former-commit-id: 2a477dde813d6f6300838af1480d9d079656b818

--- a/frontend/frontend.qrc
+++ b/frontend/frontend.qrc
@@ -162,5 +162,6 @@
         <file>Controls/+mobile/Pincode.qml</file>
         <file>+mobile/WalletBackup.qml</file>
         <file>+mobile/Applications.qml</file>
+        <file>+mobile/Notifications.qml</file>
     </qresource>
 </RCC>
