--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -230,5 +230,6 @@
         <file>icons/mobile/chat-icon_01_dark.svg</file>
         <file>icons/mobile/theme_switch-icon_01_off.svg</file>
         <file>icons/mobile/theme_switch-icon_01_on.svg</file>
+        <file>icons/mobile/notification-icon_01.svg</file>
     </qresource>
 </RCC>
