--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -232,5 +232,6 @@
         <file>icons/mobile/theme_switch-icon_01_on.svg</file>
         <file>icons/mobile/notification-icon_01.svg</file>
         <file>icons/mobile/menu-icon_01.svg</file>
+        <file>backgrounds/launchScreen-logo_01.png</file>
     </qresource>
 </RCC>
