updating coinvalue for coinlist and new process for saving and checking pincode
Former-commit-id: bd6c4fd7d440a2a8d8393f0501ccaa8b470f3c10

--- a/frontend/frontend.qrc
+++ b/frontend/frontend.qrc
@@ -166,5 +166,6 @@
         <file>Controls/+mobile/LogOut.qml</file>
         <file>Controls/+mobile/Goodbey.qml</file>
         <file>Controls/+mobile/DebugConsole.qml</file>
+        <file>Controls/+mobile/ImportKey.qml</file>
     </qresource>
 </RCC>
